feat(Page projects) 99% of content page, missing a test

--- a/content/projects/contemporary-beachfront-villa.mdx
+++ b/content/projects/contemporary-beachfront-villa.mdx
@@ -12,6 +12,14 @@ client: "David Anderson"
 ## The Client
 
 David, a real estate investor, entrusted us with the design of a luxurious beachfront villa. His vision included a sleek, contemporary design with expansive windows to maximize views of the ocean while maintaining privacy and security.
+Andy, a real estate investor, entrusted us with the design of a luxurious beachfront villa. His vision included a sleek, contemporary design with expansive windows to maximize views of the ocean while maintaining privacy and security.
+Doudi, a real estate investor, entrusted us with the design of a luxurious beachfront villa. His vision included a sleek, contemporary design with expansive windows to maximize views of the ocean while maintaining privacy and security.
+David, a real estate investor, entrusted us with the design of a luxurious beachfront villa. His vision included a sleek, contemporary design with expansive windows to maximize views of the ocean while maintaining privacy and security.
+Andy, a real estate investor, entrusted us with the design of a luxurious beachfront villa. His vision included a sleek, contemporary design with expansive windows to maximize views of the ocean while maintaining privacy and security.
+Doudi, a real estate investor, entrusted us with the design of a luxurious beachfront villa. His vision included a sleek, contemporary design with expansive windows to maximize views of the ocean while maintaining privacy and security.
+David, a real estate investor, entrusted us with the design of a luxurious beachfront villa. His vision included a sleek, contemporary design with expansive windows to maximize views of the ocean while maintaining privacy and security.
+Andy, a real estate investor, entrusted us with the design of a luxurious beachfront villa. His vision included a sleek, contemporary design with expansive windows to maximize views of the ocean while maintaining privacy and security.
+Doudi, a real estate investor, entrusted us with the design of a luxurious beachfront villa. His vision included a sleek, contemporary design with expansive windows to maximize views of the ocean while maintaining privacy and security.
 
 ## The Challenge
 
