feat(Page blog) 65% of content page, missing a test

--- a/content/blog/architectural-marvels-of-the-ancient-world.mdx
+++ b/content/blog/architectural-marvels-of-the-ancient-world.mdx
@@ -10,7 +10,15 @@ categories:
 type: "Post"
 image: "/images/project-1-min.jpg"
 ---
+Depuis le début de 2016, les progrès de l’intelligence artificielle (IA) ont été décrits et analysés dans des publications aussi variées que The Economist, Rolling Stone, Time et Fortune sous des titres accrocheurs comme « La révolution de l’intelligence artificielle » et « IA : la marche des machines ». Au-delà des scénarios de science-fiction où les machines intelligentes se retournent contre leurs créateurs, l’intelligence artificielle progresse à grands pas et permet de concevoir et de réaliser des systèmes de plus en plus impressionnants. Certaines personnes, notamment Elon Musk, fondateur de Tesla et de SpaceX, estiment par exemple que les voitures sans conducteur seront au point d’ici deux ans.
 
-Ancient civilizations left behind awe-inspiring architectural wonders that continue to captivate us today. This blog post takes you on a virtual tour of these remarkable structures, from the Great Pyramid of Giza to the Parthenon in Athens. Discover the ingenious engineering and cultural significance behind these enduring masterpieces.
+2Avant tout, l’intelligence artificielle est une discipline scientifique qui combine l’informatique, les mathématiques, l’ingénierie et la statistique. C’est un domaine de recherche auquel se consacre une communauté universitaire depuis plus de 50 ans. Cette science au goût du jour a vu ses performances croître de manière prodigieuse en grande partie grâce au big data et à la puissance de calcul des ordinateurs modernes.
 
-Explore the secrets of construction and design that allowed these ancient architects to create monumental structures that have stood the test of time. We'll delve into the symbolism, purpose, and historical context of these architectural marvels, shedding light on the incredible achievements of our ancestors.
+Des techniques d’apprentissage
+3Depuis une dizaine d’années, l’intelligence artificielle progresse à pas de géant en grande partie grâce à l’apprentissage automatique (machine learning) et plus particulièrement aux techniques d’apprentissage profond (deep learning).
+
+4Les algorithmes d’apprentissage automatique « apprennent » en extrayant des connaissances opérationnelles à partir de données (c’est donc un apprentissage inductif). Par exemple, de tels algorithmes peuvent extraire les préférences de clients d’une entreprise à partir de leurs transactions antérieures. On utilise ensuite ces algorithmes pour généraliser les résultats à de nouvelles situations similaires (soit, dans l’exemple précédent, pour prédire les préférences futures des mêmes clients). Par rapport à la statistique classique, qui s’intéresse d’abord à la compréhension des données et notamment à leurs relations causales – c’est-à-dire à démontrer ce qui cause quoi –, l’apprentissage automatique se concentre sur la qualité des prédictions, au détriment éventuel de l’interprétabilité des paramètres estimés.
+
+5L’apprentissage profond est inspiré par la structure du cerveau humain et, comme celui-ci, utilise des réseaux de neurones. Les neurones sont organisés en plusieurs couches qui utilisent toute l’information de la couche précédente, d’où la notion de profondeur. Ces réseaux ne sont évidemment qu’un modèle très simplifié de notre cerveau, mais ils ont la particularité de pouvoir utiliser leurs couches pour représenter les connaissances acquises à différents degrés d’abstraction. Par exemple, à partir de données transactionnelles, un réseau de neurones peut représenter, avec ses premières couches, les caractéristiques des articles que les clients aiment se procurer. Ces caractéristiques sont combinées par les couches suivantes pour représenter des groupes d’articles souvent achetés ensemble. Les couches finales combinent ces groupes pour représenter le profil d’acheteur de chaque client.
+
+6Les progrès en apprentissage profond ont permis d’améliorer la performance des algorithmes d’apprentissage dans des tâches de perception jugées particulièrement difficiles pour les ordinateurs. Par « perception », on entend ce qui est relié aux cinq sens humains. Le champ de la vision par ordinateur consiste à comprendre le monde qui nous entoure à l’aide d’images et de vidéos, un peu comme l’appareil visuel humain le permet. Les algorithmes d’apprentissage profond surpassent maintenant les êtres humains dans certaines tâches de reconnaissance d’objets. La reconnaissance de la parole constitue aussi un terrain fertile : les meilleurs outils de reconnaissance récents (par exemple ceux des téléphones intelligents) utilisent l’apprentissage profond.
