fix(Page blog card) categories 2 versions

--- a/content/blog/test3.mdx
+++ b/content/blog/test3.mdx
@@ -2,7 +2,7 @@
 title: "welcom chatbot IA"
 excerpt: "Ancient civilizations left behind awe-inspiring architectural wonders that continue to captivate us today. "
 date: "2023-04-27"
-author: "JoefreyCodes"
+author: "Andy Ramaroson"
 categories:
   - title: Interior
   - title: News
