--- a/content/blog/test2.mdx
+++ b/content/blog/test2.mdx
@@ -2,7 +2,7 @@
 title: "Hello World"
 excerpt: "Ancient civilizations left behind awe-inspiring architectural wonders that continue to captivate us today. "
 date: "2023-04-27"
-author: "JoefreyCodes"
+author: "Andy Ramaroson"
 categories:
   - title: Interior
   - title: News
