fix(contact-page) clean code

--- a/content/blog/Integration-IA-TensorFlow.mdx
+++ b/content/blog/Integration-IA-TensorFlow.mdx
@@ -6,6 +6,7 @@ author: "Andy Ramaroson"
 categories:
   - title: Next_Js
   - title: ChatGPT
+  - title: React
 type: "Post"
 image: "/images/tensorFlow.svg"
 ---
