feat(update-component) add pricing , change page project missing test

--- a/content/projects/modern-eco-friendly-residence.mdx
+++ b/content/projects/modern-eco-friendly-residence.mdx
@@ -7,6 +7,7 @@ location: "Los Angeles, CA"
 year: "2023"
 role: "Interior Design"
 client: "Sarah and John Smith"
+description: "David, a real estate investor, entrusted us with the design of a luxurious beachfront villa. His vision included a sleek, contemporary"
 ---
 
 ## The Client
