feat(update-component) add pricing and clean code ereur responsive

--- a/content/blog/the-psychology-of-space-designing-environments-for-well-being.mdx
+++ b/content/blog/the-psychology-of-space-designing-environments-for-well-being.mdx
@@ -1,5 +1,5 @@
 ---
-title: "The Psychology of Space: Designing Environments for Well-being"
+title: "The Psychology of Space: Designing Environments for Well-being profound"
 excerpt: "Architects have a profound impact on people's well-being by shaping the environments in which they live, work, and play."
 date: "2023-01-04"
 author: "Andy Ramaroson"
@@ -11,7 +11,7 @@ type: "Post"
 image: "/images/post-3-min.jpg"
 ---
 
-## The Psychology of Space: Designing Environments for Well-being
+## The Psychology of Space: Designing Environments for Well-being profound impact
 
 Architects have a profound impact on people's well-being by shaping the environments in which they live, work, and play. The field of environmental psychology examines how design elements such as lighting, spatial layout, and colors can influence emotions, stress levels, and cognitive function. By understanding these dynamics, architects can craft spaces that promote positive mental health and enrich people's lives.
 
