--- a/content/projects/contemporary-beachfront-villa.mdx
+++ b/content/projects/contemporary-beachfront-villa.mdx
@@ -7,7 +7,7 @@ location: "Miami, FL"
 year: "2019"
 role: "Interior Design"
 client: "David Anderson"
-description: "David, a real estate investor, entrusted us with the design of a luxurious beachfront villa. His vision included a sleek, contemporary."
+description: "Entrusted us with the design of a luxurious beachfront villa. His vision included a sleek, contemporary."
 ---
 
 ## The Client
