--- a/content/projects/high-tech-smart-home.mdx
+++ b/content/projects/high-tech-smart-home.mdx
@@ -7,7 +7,7 @@ location: "Seattle, WA"
 year: "2021"
 role: "Interior Design"
 client: "Jennifer Miller"
-description: "David, a real estate investor, entrusted us with the design of a luxurious beachfront villa. His vision included a sleek, contemporary"
+description: "Luxurious beachfront villa. His vision included a sleek, contemporary"
 ---
 
 ## The Client
