--- a/content/projects/sustainable-office-building.mdx
+++ b/content/projects/sustainable-office-building.mdx
@@ -7,7 +7,7 @@ location: "San Francisco, CA"
 year: "2022"
 role: "Interior Design"
 client: "Michael and Maria Rodriguez"
-description: "David, a real estate investor, entrusted us with the design of a luxurious beachfront villa. His vision included a sleek, contemporary"
+description: "Beachfront villa. His vision included a sleek, contemporary. Entrusted us with the design of a luxurious."
 ---
 
 ## The Client
