--- a/content/projects/urban-loft-renovation.mdx
+++ b/content/projects/urban-loft-renovation.mdx
@@ -7,7 +7,7 @@ location: "New York City, NY"
 year: "2021"
 role: "Interior Design"
 client: "Emily Turner"
-description: "David, a real estate investor, entrusted us with the design of a luxurious beachfront villa. His vision included a sleek, contemporary"
+description: "A real estate investor, entrusted us with the design of a luxurious beachfront villa."
 ---
 
 ## The Client
