[feat] add link calendly

--- a/content/projects/i-doctor.mdx
+++ b/content/projects/i-doctor.mdx
@@ -1,13 +1,13 @@
 ---
-title: "Contemporary Beachfront Villa"
+title: "i-doctor"
 type: "Project"
-date: "2019-01-23"
+date: "2023-01-23"
 image: "/images/project-1-min.jpg"
-location: "Miami, FL"
-year: "2019"
-role: "Interior Design"
-client: "David Anderson"
-description: "Entrusted us with the design of a luxurious beachfront villa. His vision included a sleek, contemporary."
+location: "Bordeaux, FR"
+year: "2023"
+role: "doctor"
+client: "Dr Ramaro L"
+description: "Create application booking consulatation ultra connected"
 ---
 
 ## The Client
