[feat] Update content projects

--- a/content/projects/i-doctor.mdx
+++ b/content/projects/i-doctor.mdx
@@ -1,31 +1,69 @@
 ---
-title: "i-doctor"
+title: "I-doctor"
 type: "Project"
-date: "2023-01-23"
+date: "2023-02-20"
 image: "/images/project-1-min.jpg"
 location: "Bordeaux, FR"
-year: "2023"
-role: "doctor"
-client: "Dr Ramaro L"
-description: "Create application booking consulatation ultra connected"
+year: "Fevrier 2024"
+role: "Docteur generaliste"
+client: "Dr Patrick Lamber."
+description: "I-doctor: Révolutionner la Télé-Consultation en Ligne connectée"
 ---
 
-## The Client
+## Présentation
 
-David, a real estate investor, entrusted us with the design of a luxurious beachfront villa. His vision included a sleek, contemporary design with expansive windows to maximize views of the ocean while maintaining privacy and security.
-Andy, a real estate investor, entrusted us with the design of a luxurious beachfront villa. His vision included a sleek, contemporary design with expansive windows to maximize views of the ocean while maintaining privacy and security.
-Doudi, a real estate investor, entrusted us with the design of a luxurious beachfront villa. His vision included a sleek, contemporary design with expansive windows to maximize views of the ocean while maintaining privacy and security.
-David, a real estate investor, entrusted us with the design of a luxurious beachfront villa. His vision included a sleek, contemporary design with expansive windows to maximize views of the ocean while maintaining privacy and security.
-Andy, a real estate investor, entrusted us with the design of a luxurious beachfront villa. His vision included a sleek, contemporary design with expansive windows to maximize views of the ocean while maintaining privacy and security.
-Doudi, a real estate investor, entrusted us with the design of a luxurious beachfront villa. His vision included a sleek, contemporary design with expansive windows to maximize views of the ocean while maintaining privacy and security.
-David, a real estate investor, entrusted us with the design of a luxurious beachfront villa. His vision included a sleek, contemporary design with expansive windows to maximize views of the ocean while maintaining privacy and security.
-Andy, a real estate investor, entrusted us with the design of a luxurious beachfront villa. His vision included a sleek, contemporary design with expansive windows to maximize views of the ocean while maintaining privacy and security.
-Doudi, a real estate investor, entrusted us with the design of a luxurious beachfront villa. His vision included a sleek, contemporary design with expansive windows to maximize views of the ocean while maintaining privacy and security.
+Le monde de la santé évolue rapidement, et I-doctor se positionne comme une nouvelle
+startup qui souhaite révoluter les télé-consultations. En France, où 11 % des patients
+sont sans médecins traitants, notre application s'impose comme une solution innovante
+pour offrir des services de santé flexibles, accessibles, et de haute qualité.
+Couplée à notre dispositif ultra connecté, le multiscope "Beam-0", les télé-consultations
+atteignent de nouveaux sommets de pertinence.
 
-## The Challenge
+## Besoin Client:
 
-Nullam condimentum gravida turpis vel pulvinar. Duis ex ipsum, porttitor nec elementum mattis, ullamcorper ut enim. Proin vel nibh placerat, molestie magna facilisis, vehicula nunc. Proin pharetra vulputate justo, ut ullamcorper tellus bibendum a. Sed at faucibus sapien, eget lobortis mauris. Nunc suscipit enim ut est egestas, eu vulputate augue laoreet. Curabitur elementum urna at felis elementum suscipit.
+Dans un contexte de pénurie de médecins et d'une demande croissante de flexibilité,I-Doctor
+répond au besoin pressant de consultations médicales adaptées à l'emploi du temps et à la
+localisation des patients. Nous nous engageons à innover pour faciliter les rendez-vous
+médicaux et à soulager la charge de travail des professionnels de la santé en repensant
+le concept même de visite à domicile.
 
-## The Solution
+## Challenge:
 
-Curabitur sit amet accumsan ante. Duis quis gravida dui. Donec neque felis, congue eget orci in, maximus ullamcorper sem. Vivamus feugiat eu erat et fringilla. In elementum semper odio, a luctus ex ultricies vitae. Nullam pharetra ex urna, blandit gravida diam vestibulum sed. Mauris pharetra fringilla felis et dapibus.
+Le défi passionnant d'I-doctor consiste à créer bien plus qu'une simple plateforme
+de télé-consultation. Nous aspirons à offrir une expérience utilisateur inégalée
+tout en garantissant la sécurité des données médicales et en respectant les normes
+les plus strictes d'efficacité et de confidentialité.
+
+## Axes de Développement du Projet:
+
+Interface Utilisateur Intuitive: Une interface conviviale qui permet aux utilisateurs
+de trouver facilement des professionnels de la santé et de réserver des consultations
+en quelques clics.
+
+Sécurité et Confidentialité: Des protocoles de sécurité robustes pour protéger les
+données médicales des utilisateurs, garantissant ainsi la confidentialité et la
+conformité aux normes réglementaires.
+
+Intégration de la Fonction de Réservation: Un système de réservation efficace offrant
+aux utilisateurs la flexibilité de choisir des créneaux horaires adaptés à leurs
+emplois du temps.
+
+Technologie de Communication en Temps Réel: Des fonctionnalités de communication
+en temps réel pour des consultations vidéo fluides et interactives entre les patients
+et les professionnels de la santé.
+
+Options de Paiement Sécurisées: Un système de paiement en ligne sécurisé pour une
+transaction financière pratique et confidentielle avant la consultation.
+
+## Solution:
+
+Notre solution, I-doctor, est bien plus qu'une plateforme de télé-consultation.
+C'est une expérience de santé réimaginée, combinant une interface utilisateur intuitive,
+une sécurité de pointe, une réservation simplifiée, une communication en temps réel
+et des options de paiement sécurisées.
+
+Ensemble, nous révolutionnons l'accès aux soins de santé, offrant une expérience
+exceptionnelle qui s'adapte aux besoins changeants de notre société moderne. I-doctor,
+votre allié pour une santé connectée et accessible.
+
+[![](https://markdown-videos-api.jorgenkh.no/youtube/LoqVkdw1ZUg)](https://youtu.be/LoqVkdw1ZUg)
