[feat] Update content projects with image

--- a/content/projects/Unlcoaching.mdx
+++ b/content/projects/Unlcoaching.mdx
@@ -2,7 +2,7 @@
 title: "Unlcoaching"
 type: "Project"
 date: "2024-01-16"
-image: "/images/project-3-min.jpg"
+image: "/images/coach1.jpg"
 location: "Bordeaux, FR"
 year: "2024"
 role: "Coach Sportif"
