--- a/content/projects/Unlcoaching2.mdx
+++ b/content/projects/Unlcoaching2.mdx
@@ -2,7 +2,7 @@
 title: "Unlcoaching.app"
 type: "Project"
 date: "2024-02-16"
-image: "/images/project-3-min.jpg"
+image: "/images/fitness.png"
 location: "Bordeaux, FR"
 year: "2024"
 role: "Coach Sportif"
