--- a/content/projects/i-doctor.mdx
+++ b/content/projects/i-doctor.mdx
@@ -2,7 +2,7 @@
 title: "I-doctor"
 type: "Project"
 date: "2023-02-20"
-image: "/images/project-1-min.jpg"
+image: "/images/hero-img-1-min.jpg"
 location: "Bordeaux, FR"
 year: "Fevrier 2024"
 role: "Docteur generaliste"
@@ -19,6 +19,10 @@ pour offrir des services de santé flexibles, accessibles, et de haute qualité.
 Couplée à notre dispositif ultra connecté, le multiscope "Beam-0", les télé-consultations
 atteignent de nouveaux sommets de pertinence.
 
+## Présentation du produit:
+
+[![](https://markdown-videos-api.jorgenkh.no/youtube/LoqVkdw1ZUg)](https://youtu.be/LoqVkdw1ZUg)
+
 ## Besoin Client:
 
 Dans un contexte de pénurie de médecins et d'une demande croissante de flexibilité,I-Doctor
@@ -34,27 +38,6 @@ de télé-consultation. Nous aspirons à offrir une expérience utilisateur iné
 tout en garantissant la sécurité des données médicales et en respectant les normes
 les plus strictes d'efficacité et de confidentialité.
 
-## Axes de Développement du Projet:
-
-Interface Utilisateur Intuitive: Une interface conviviale qui permet aux utilisateurs
-de trouver facilement des professionnels de la santé et de réserver des consultations
-en quelques clics.
-
-Sécurité et Confidentialité: Des protocoles de sécurité robustes pour protéger les
-données médicales des utilisateurs, garantissant ainsi la confidentialité et la
-conformité aux normes réglementaires.
-
-Intégration de la Fonction de Réservation: Un système de réservation efficace offrant
-aux utilisateurs la flexibilité de choisir des créneaux horaires adaptés à leurs
-emplois du temps.
-
-Technologie de Communication en Temps Réel: Des fonctionnalités de communication
-en temps réel pour des consultations vidéo fluides et interactives entre les patients
-et les professionnels de la santé.
-
-Options de Paiement Sécurisées: Un système de paiement en ligne sécurisé pour une
-transaction financière pratique et confidentielle avant la consultation.
-
 ## Solution:
 
 Notre solution, I-doctor, est bien plus qu'une plateforme de télé-consultation.
@@ -66,4 +49,26 @@ Ensemble, nous révolutionnons l'accès aux soins de santé, offrant une expéri
 exceptionnelle qui s'adapte aux besoins changeants de notre société moderne. I-doctor,
 votre allié pour une santé connectée et accessible.
 
-[![](https://markdown-videos-api.jorgenkh.no/youtube/LoqVkdw1ZUg)](https://youtu.be/LoqVkdw1ZUg)
+
+## Axes de Développement du Projet:
+
+- Interface Utilisateur Intuitive: Une interface conviviale qui permet aux utilisateurs
+de trouver facilement des professionnels de la santé et de réserver des consultations
+en quelques clics.
+
+- Sécurité et Confidentialité: Des protocoles de sécurité robustes pour protéger les
+données médicales des utilisateurs, garantissant ainsi la confidentialité et la
+conformité aux normes réglementaires.
+
+- Intégration de la Fonction de Réservation: Un système de réservation efficace offrant
+aux utilisateurs la flexibilité de choisir des créneaux horaires adaptés à leurs
+emplois du temps.
+
+- Technologie de Communication en Temps Réel: Des fonctionnalités de communication
+en temps réel pour des consultations vidéo fluides et interactives entre les patients
+et les professionnels de la santé.
+
+- Options de Paiement Sécurisées: Un système de paiement en ligne sécurisé pour une
+transaction financière pratique et confidentielle avant la consultation.
+
+** **
